--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <h5 class="mt-3">Temukan hotel pilihanmu disini</h5>
             </div>
             <div class="col" style="text-align: end;">
-                <img width="600" src="https://www.discoverasr.com/content/dam/tal/media/images/properties/indonesia/jakarta/oakwood-hotel-apartments-taman-mini-jakarta/overview/OHATMJ-banner-mobile.jpg.transform/ascott-lowres/image.jpg" alt="Gambar">
+                <img style="width: 80%;" src="https://www.discoverasr.com/content/dam/tal/media/images/properties/indonesia/jakarta/oakwood-hotel-apartments-taman-mini-jakarta/overview/OHATMJ-banner-mobile.jpg.transform/ascott-lowres/image.jpg" alt="Gambar">
             </div>
         </div>
     </div>
