--- a/products.html
+++ b/products.html
@@ -158,7 +158,7 @@
               <div>☑️Resepsionis 24 Jam</div>
               <div>☑️Parkir</div>
               <div>
-                📍Jalan Sumatera No. 51, Bandung Wetan, 40014 Bandung, Indonesia
+                📍Jalan Sumatera No. 51, Jakarta Wetan, 40014 Jakarta, Indonesia
               </div>
               <p>⭐⭐⭐⭐⭐</p>
               <p class="mycomment"></p>
@@ -181,8 +181,8 @@
               <div>☑️Resepsionis 24 Jam</div>
               <div>☑️Parkir</div>
               <div>
-                📍Jalan Pasirkaliki No.16-18 BANDUNG Jalan Stasiun Barat
-                No.25-26 Bandung, 40181 Bandung,
+                📍Jalan Pasirkaliki No.16-18 Jalan Stasiun Barat
+                No.25-26, 40181 Palembang,
               </div>
               <p>⭐⭐⭐⭐</p>
               <p class="mycomment"></p>
@@ -204,7 +204,7 @@
               <div>☑️Restoran</div>
               <div>☑️Resepsionis 24 Jam</div>
               <div>☑️Parkir</div>
-              <div>📍Jalan Cihampelas no 211-217, 40131 Bandung, Indonesia</div>
+              <div>📍Jalan Cihampelas no 211-217, 40131 Bekasi, Indonesia</div>
               <p>⭐⭐⭐⭐</p>
               <p class="mycomment"></p>
             </div>
@@ -226,7 +226,7 @@
               <div>☑️Resepsionis 24 Jam</div>
               <div>☑️Parkir</div>
               <div>
-                📍Jl. Asia Afrika No. 81, Sumurbandung, 40111 Bandung, Indonesia
+                📍Jl. Asia Afrika No. 81, 40111 Semarang, Indonesia
               </div>
               <p>⭐⭐⭐⭐⭐</p>
               <p class="mycomment"></p>
